--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -5,3 +5,5 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.boot.message= Hello from here
