--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -6,4 +6,4 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-spring.boot.message= Hello from here
+spring.boot.message= Hello from here UPDATED
